<resources>
    <string name="app_name">Home Pi</string>
    <string name="main_activity_home_pi_logo">Home Pi Logo</string>
    <string name="error_cannot_connect">Cannot connect to Home Pi server</string>

    <string name="login_activity_title">Sign in</string>
    <string name="login_activity_prompt_display_name">Display name</string>
    <string name="login_activity_prompt_username">Username</string>
    <string name="login_activity_prompt_password">Password</string>
    <string name="login_activity_prompt_password_retype">Retype password</string>
    <string name="login_activity_sign_in">Sign in</string>
    <string name="login_activity_sign_up">Sign up</string>
    <string name="login_activity_dont_have_an_account">Don\'t have an account?</string>
    <string name="login_activity_already_have_an_account">Already have an account?</string>
    <string name="login_activity_invalid_display_name">Display name must not be empty</string>
    <string name="login_activity_invalid_username">Username muse be >6 characters and contain only alphanumeric characters</string>
    <string name="login_activity_invalid_password">Password must be >8 characters, with at least one lowercase character, one uppercase character and one digit</string>
    <string name="login_activity_invalid_password_retype">Retyped password is not equal to original password</string>
    <string name="login_activity_welcome">"Welcome!"</string>
    <string name="login_activity_submit_failed">An error happened</string>

    <string name="home_activity_title">Home</string>
    <string name="home_activity_commanders">Commanders</string>
    <string name="home_activity_devices">Devices</string>
    <string name="home_activity_settings">Settings</string>
    <string name="home_activity_commander_refresh">Refresh</string>
    <string name="home_activity_add_commander_device">Add commander device</string>
    <string name="home_activity_device_refresh">Refresh</string>
    <string name="home_activity_add_device">Add device</string>

    <string name="device_list_item_name">Device name</string>
    <string name="device_list_item_description">Device description</string>
    <string name="device_list_item_image">Device image</string>
    <string name="device_list_item_unregister">Unregister</string>

    <string name="register_commander_activity_register_commander">Register commander</string>
    <string name="register_commander_activity_guide">Make sure that your device\'s Bluetooth is enabled and is discoverable</string>
    <string name="register_commander_activity_please_enable_bluetooth">Please enable Bluetooth to continue</string>
    <string name="register_commander_activity_permission_rationale">Bluetooth and Location services are needed to discover Bluetooth devices</string>
    <string name="register_commander_activity_enable_bluetooth_button">Enable bluetooth</string>
    <string name="register_commander_activity_refresh">Refresh</string>
    <string name="register_commander_an_error_happened">An error happened, cannot register commander</string>
    <string name="register_commander_register_success">Registered commander successfully</string>

    <string name="register_device_activity_register_device">Register device</string>
    <string name="register_device_activity_guide">Make sure that your device\'s Bluetooth is enabled and is discoverable</string>
    <string name="register_device_activity_please_enable_bluetooth">Please enable Bluetooth to continue</string>
    <string name="register_device_activity_permission_rationale">Bluetooth and Location services are needed to discover Bluetooth devices</string>
    <string name="register_device_activity_enable_bluetooth_button">Enable bluetooth</string>
    <string name="register_device_activity_refresh">Refresh</string>
    <string name="register_device_an_error_happened">An error happened, cannot register device</string>
    <string name="register_device_register_success">Registered device successfully</string>

    <string name="connect_wifi_activity_title">Select WiFi Network</string>
    <string name="connect_wifi_activity_please_select_wifi">Please select a WiFi network for the device to connect to</string>
    <string name="connect_wifi_activity_auth_dialog_ssid">SSID</string>
    <string name="connect_wifi_activity_auth_dialog_password">Password</string>
    <string name="connect_wifi_activity_failure">Cannot connect to WiFi network</string>
    <string name="connect_wifi_activity_refresh">Refresh</string>
    <string name="connect_wifi_activity_please_enable_bluetooth">Please enable Bluetooth to continue</string>
    <string name="connect_wifi_activity_enable_bluetooth_button">Enable bluetooth</string>

    <string name="wifi_list_item_image_description">WiFi Image</string>
    <string name="wifi_list_item_title">WiFi SSID</string>

    <string name="settings_user_avatar">User avatar</string>
    <string name="settings_user_display_name">User display name</string>
    <string name="settings_username">Username</string>
    <string name="settings_log_out">Log out</string>
    <string name="settings_cannot_logout">Cannot log out</string>
    <string name="commander_no_commander_registered">No data</string>
    <string name="device_no_device_registered">No data</string>
    <string name="device_list_item_rename">Rename</string>
</resources>